# rlm-opencode

./: .gitignore  ARCHITECTURE.md  BENCHMARK_RESULTS.md  Dockerfile  GIT-WORKFLOW.md  LICENSE  README.md  pyproject.toml  rlm-paper.md  test_limit.py
src/rlm_opencode/: __init__.py  cli.py  context_tools.py  dashboard.html  detector.py  docs.py  embeddings.py  server.py  session.py  setup.py
src/rlm_opencode/providers/: __init__.py  base.py  openai_compatible.py  registry.py
